<resources>
    <string name="Clubhouse">Clubhouse</string>
    <string name="dropdown">Dropdown</string>
    <string name="search">Search</string>
    <string name="tennisapp">TennisApp</string>
    <string name="challenge">Challenge</string>
    <string name="enter_name">Name</string>
    <string name="enter_club">Club</string>
    <string name="enter_phone">Phone number</string>
    <string name="login">Login</string>
    <string name="no_club">Enter your club</string>
    <string name="no_name">Enter your name</string>
    <string name="no_phone">Enter your phone number</string>
    <string name="logging_in_error">Login failed. Check you have entered the correct phone number and club name</string>
    <string name="verify">Enter Verification Code</string>
    <string name="verify_button">Verify</string>
    <string name="register_success">Your account has been created</string>
    <string name="closeButton">X</string>
    <string name="profpic">Temp Profpic</string>
    <string name="BigmanJohn">John</string>
    <string name="BigmanJohnsStats">Elo = 3000, Age = 26</string>
    <string name="courtavfpop">Court Availabilities</string>
    <string name="age">age</string>
    <string name="gender">Gender</string>
    <string name="level">Standard of play (relative to your club)</string>
    <string name="finish">Finish</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="players">Players</string>
    <string name="challenges">Challenges</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="bookings">Bookings</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="make_booking">Making booking</string>
    <string name="message">Message</string>
    <string name="register">Register</string>
    <string name="club">Club</string>
    <string name="name">name</string>
    <string name="MatchPoint">MatchPoint</string>
    <string-array name="filter">
        <item>No Filter</item>
        <item>Filter by age</item>
    </string-array>
</resources>