<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:paddingStart="0dp"
    android:paddingEnd="0dp">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textColor="@color/TAppMainGreen"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCourt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Court"
        android:textColor="@color/TAppMainGreen"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/btnReject"
        app:layout_constraintEnd_toStartOf="@+id/tvDay"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Day"
        android:textSize="20sp"
        android:textColor="@color/TAppMainGreen"
        app:layout_constraintBottom_toTopOf="@+id/btnReject"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hour"
        android:textColor="@color/TAppMainGreen"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnReject"
        app:layout_constraintStart_toEndOf="@+id/tvDay"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/accept"
        android:backgroundTint="@color/TAppMainGreen"
        android:textColor="@color/creamy_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnReject"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnReject"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/reject"
        android:backgroundTint="@color/TAppMainGreen"
        android:textColor="@color/creamy_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAccept" />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="25sp"
        android:layout_marginBottom="12dp"
        android:text="@string/message"
        android:textColor="@color/TAppMainGreen"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnReject"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>